objects/tffa__FinancingTable__c.object
<CustomObject>
    <description>Captures all charges imposed on buyers and sellers in consumer credit mortgage transactions.</description>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to Application object for which current financing details are captured.</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Credits &amp; Debits</relationshipLabel>
        <relationshipName>FinancingTables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Shortfall__c</fullName>
        <description>Shortfall between total charges and total funding.</description>
        <label>Shortfall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalInflow__c</fullName>
        <description>Sum of all source funds to pay off the imposed lending application charges.</description>
        <label>Total Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__TotalOutflow__c</fullName>
        <description>Sum of all the charges/fees imposed as part of current lending application.</description>
        <label>Total Debit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Financing Table</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FinancingTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financing Table</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>